{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 540,
  "lineage": "5fbade57-fd55-47fd-1850-10fac807018c",
  "resources": [
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "nexus-cluster-network-d6pd-network",
            "name": "nexus-cluster-network-d6pd-network",
            "project": "aliz-hw-adamsz",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/aliz-hw-adamsz/global/networks/nexus-cluster-network-d6pd-network"
          },
          "dependencies": [
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "vpc_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-09-27T14:18:26.460-07:00",
            "id": "europe-west2/nexus-cluster-network-d6pd-router",
            "name": "nexus-cluster-network-d6pd-router",
            "network": "https://www.googleapis.com/compute/v1/projects/aliz-hw-adamsz/global/networks/nexus-cluster-network-d6pd-network",
            "project": "aliz-hw-adamsz",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/aliz-hw-adamsz/regions/europe-west2/routers/nexus-cluster-network-d6pd-router"
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "vpc_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 0,
            "id": "europe-west2/nexus-cluster-network-d6pd-router/nexus-cluster-network-d6pd-nat",
            "min_ports_per_vm": 0,
            "name": "nexus-cluster-network-d6pd-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "aliz-hw-adamsz",
            "region": "europe-west2",
            "router": "nexus-cluster-network-d6pd-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/aliz-hw-adamsz/regions/europe-west2/subnetworks/nexus-cluster-network-d6pd-subnetwork-public",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 0,
            "tcp_transitory_idle_timeout_sec": 0,
            "udp_idle_timeout_sec": 0
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "module.vpc_network.google_compute_router.vpc_router",
            "module.vpc_network.google_compute_subnetwork.vpc_subnetwork_public",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-09-27T14:18:27.471-07:00",
            "enable_flow_logs": true,
            "fingerprint": "W9RDoFhpagk=",
            "gateway_address": "10.1.16.1",
            "id": "europe-west2/nexus-cluster-network-d6pd-subnetwork-private",
            "ip_cidr_range": "10.1.16.0/20",
            "name": "nexus-cluster-network-d6pd-subnetwork-private",
            "network": "https://www.googleapis.com/compute/v1/projects/aliz-hw-adamsz/global/networks/nexus-cluster-network-d6pd-network",
            "private_ip_google_access": true,
            "project": "aliz-hw-adamsz",
            "region": "europe-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.2.16.0/20",
                "range_name": "private-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/aliz-hw-adamsz/regions/europe-west2/subnetworks/nexus-cluster-network-d6pd-subnetwork-private"
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-09-27T14:18:26.469-07:00",
            "enable_flow_logs": true,
            "fingerprint": "Y5IGlLyVk7k=",
            "gateway_address": "10.1.0.1",
            "id": "europe-west2/nexus-cluster-network-d6pd-subnetwork-public",
            "ip_cidr_range": "10.1.0.0/20",
            "name": "nexus-cluster-network-d6pd-subnetwork-public",
            "network": "https://www.googleapis.com/compute/v1/projects/aliz-hw-adamsz/global/networks/nexus-cluster-network-d6pd-network",
            "private_ip_google_access": true,
            "project": "aliz-hw-adamsz",
            "region": "europe-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.2.0.0/20",
                "range_name": "public-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/aliz-hw-adamsz/regions/europe-west2/subnetworks/nexus-cluster-network-d6pd-subnetwork-public"
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "private_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.1.16.1",
            "id": "europe-west2/nexus-cluster-network-d6pd-subnetwork-private",
            "ip_cidr_range": "10.1.16.0/20",
            "network": "https://www.googleapis.com/compute/v1/projects/aliz-hw-adamsz/global/networks/nexus-cluster-network-d6pd-network",
            "private_ip_google_access": true,
            "project": "aliz-hw-adamsz",
            "region": "europe-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.2.16.0/20",
                "range_name": "private-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/aliz-hw-adamsz/regions/europe-west2/subnetworks/nexus-cluster-network-d6pd-subnetwork-private"
          }
        }
      ]
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "public_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.1.0.1",
            "id": "europe-west2/nexus-cluster-network-d6pd-subnetwork-public",
            "ip_cidr_range": "10.1.0.0/20",
            "network": "https://www.googleapis.com/compute/v1/projects/aliz-hw-adamsz/global/networks/nexus-cluster-network-d6pd-network",
            "private_ip_google_access": true,
            "project": "aliz-hw-adamsz",
            "region": "europe-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.2.0.0/20",
                "range_name": "public-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/aliz-hw-adamsz/regions/europe-west2/subnetworks/nexus-cluster-network-d6pd-subnetwork-public"
          }
        }
      ]
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private_allow_all_network_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2020-09-27T14:19:05.486-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "nexus-cluster-network-d6pd-private-allow-ingress",
            "name": "nexus-cluster-network-d6pd-private-allow-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/aliz-hw-adamsz/global/networks/nexus-cluster-network-d6pd-network",
            "priority": 1000,
            "project": "aliz-hw-adamsz",
            "self_link": "https://www.googleapis.com/compute/v1/projects/aliz-hw-adamsz/global/firewalls/nexus-cluster-network-d6pd-private-allow-ingress",
            "source_ranges": [
              "10.1.0.0/20",
              "10.1.16.0/20",
              "10.2.0.0/20",
              "10.2.16.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "private"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "module.vpc_network.google_compute_subnetwork.vpc_subnetwork_private",
            "module.vpc_network.google_compute_subnetwork.vpc_subnetwork_public",
            "module.vpc_network.module.network_firewall.data.google_compute_subnetwork.private_subnetwork",
            "module.vpc_network.module.network_firewall.data.google_compute_subnetwork.public_subnetwork",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private_allow_restricted_network_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2020-09-27T14:18:26.270-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "nexus-cluster-network-d6pd-allow-restricted-inbound",
            "name": "nexus-cluster-network-d6pd-allow-restricted-inbound",
            "network": "https://www.googleapis.com/compute/v1/projects/aliz-hw-adamsz/global/networks/nexus-cluster-network-d6pd-network",
            "priority": 1000,
            "project": "aliz-hw-adamsz",
            "self_link": "https://www.googleapis.com/compute/v1/projects/aliz-hw-adamsz/global/firewalls/nexus-cluster-network-d6pd-allow-restricted-inbound",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "private",
              "private-persistence"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "private-persistence"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "public_allow_all_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2020-09-27T14:18:26.261-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "nexus-cluster-network-d6pd-public-allow-ingress",
            "name": "nexus-cluster-network-d6pd-public-allow-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/aliz-hw-adamsz/global/networks/nexus-cluster-network-d6pd-network",
            "priority": 1000,
            "project": "aliz-hw-adamsz",
            "self_link": "https://www.googleapis.com/compute/v1/projects/aliz-hw-adamsz/global/firewalls/nexus-cluster-network-d6pd-public-allow-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "public"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "random_string.suffix"
          ]
        }
      ]
    }
  ]
}